--- a/XTS/WS-C/pom.xml
+++ b/XTS/WS-C/pom.xml
@@ -17,7 +17,7 @@
     <artifactId>xts-all</artifactId>
     <version>5.9.1.Final-SNAPSHOT</version>
     <relativePath>../pom.xml</relativePath>
-  </parent>
+ </parent>
   <modelVersion>4.0.0</modelVersion>
   <artifactId>ws-c11</artifactId>
   <packaging>jar</packaging>
@@ -77,6 +77,7 @@
               <goal>jar</goal>
             </goals>
             <configuration>
+              <classifier>impl</classifier>
               <forceCreation>true</forceCreation>
               <excludes>
                 <exclude>com/arjuna/wsc/AlreadyRegisteredException.class</exclude>
@@ -118,4 +119,53 @@
       <scope>provided</scope>
     </dependency>
   </dependencies>
+
+  <profiles>
+    <profile>
+      <id>release</id>
+      <build>
+        <plugins>
+          <plugin>
+            <groupId>org.apache.maven.plugins</groupId>
+            <artifactId>maven-install-plugin</artifactId>
+            <executions>
+              <execution>
+                <id>default-install</id>
+                <phase>install</phase>
+              </execution>
+            </executions>
+            <inherited>false</inherited>
+          </plugin>
+        </plugins>
+      </build>
+    </profile>
+
+    <profile>
+      <id>j9</id>
+      <activation>
+        <jdk>[1.9,)</jdk>
+      </activation>
+
+      <build>
+        <plugins>
+          <plugin>
+            <groupId>org.apache.maven.plugins</groupId>
+            <artifactId>maven-compiler-plugin</artifactId>
+            <executions>
+              <execution>
+                <id>default-compile</id>
+                <configuration>
+                  <compilerArgs>
+                      <arg>--add-modules</arg>
+                  <arg>java.xml,java.xml.bind,java.xml.ws</arg>
+                  </compilerArgs>
+                </configuration>
+              </execution>
+            </executions>
+          </plugin>
+        </plugins>
+      </build>
+    </profile>
+  </profiles>
+
 </project>
