--- a/qa/pom.xml
+++ b/qa/pom.xml
@@ -254,7 +254,7 @@
       <dependencies>
         <dependency>
           <groupId>org.jboss.narayana.jts</groupId>
-          <artifactId>narayana-jts-idlj-j9</artifactId>
+          <artifactId>narayana-jts-idlj</artifactId>
           <version>${project.version}</version>
         </dependency>
       </dependencies>
