--- a/ArjunaJTS/narayana-jts-jacorb/pom.xml
+++ b/ArjunaJTS/narayana-jts-jacorb/pom.xml
@@ -284,6 +284,24 @@
 
   <profiles> 
     <profile>
+        <id>release-9</id>
+        <build>
+          <plugins>
+          <plugin>
+            <groupId>org.apache.maven.plugins</groupId>
+            <artifactId>maven-install-plugin</artifactId>
+            <executions>
+              <execution>
+                <id>default-install</id>
+                <phase>install</phase>
+              </execution>
+            </executions>
+            <inherited>false</inherited>
+          </plugin>
+        </plugins>
+      </build>
+    </profile>
+    <profile>
         <id>release</id>
         <build>
           <plugins>
@@ -312,6 +330,7 @@
             <configuration>
               <detectOfflineLinks>false</detectOfflineLinks>
               <excludePackageNames>*.internal.*</excludePackageNames>
+              <failOnError>false</failOnError>
             </configuration>
           </plugin>
         </plugins>
