--- a/ArjunaCore/arjunacore/pom.xml
+++ b/ArjunaCore/arjunacore/pom.xml
@@ -194,5 +194,23 @@
         </plugins>
       </build>
     </profile>
+    <profile>
+        <id>release-9</id>
+        <build>
+          <plugins>
+              <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-install-plugin</artifactId>
+                <executions>
+                  <execution>
+                    <id>default-install</id>
+                    <phase>install</phase>
+                  </execution>
+                </executions>
+                <inherited>false</inherited>
+              </plugin>
+        </plugins>
+      </build>
+    </profile>
   </profiles>
 </project>
