--- a/rts/at/tx/pom.xml
+++ b/rts/at/tx/pom.xml
@@ -345,6 +345,24 @@
         </build>
     </profile>
     <profile>
+        <id>release-9</id>
+        <build>
+          <plugins>
+          <plugin>
+            <groupId>org.apache.maven.plugins</groupId>
+            <artifactId>maven-install-plugin</artifactId>
+            <executions>
+              <execution>
+                <id>default-install</id>
+                <phase>install</phase>
+              </execution>
+            </executions>
+            <inherited>false</inherited>
+          </plugin>
+        </plugins>
+      </build>
+    </profile>
+    <profile>
         <id>release</id>
         <build>
             <plugins>
