--- a/tomcat/tomcat-jta/pom.xml
+++ b/tomcat/tomcat-jta/pom.xml
@@ -37,6 +37,7 @@
             -javaagent:${project.build.directory}/lib/byteman.jar=script:${project.build.directory}/test-classes/scripts.btm,listener:true
         </jvm.args.byteman>
         <server.jvm.args>${jvm.args.byteman} ${jvm.args.debug}</server.jvm.args>
+        <skipITs>false</skipITs>
     </properties>
     <dependencies>
         <dependency>
@@ -249,7 +250,7 @@
                                     <goal>integration-test</goal>
                                 </goals>
                                 <configuration>
-                                    <skip>false</skip>
+                                    <skipITs>${skipITs}</skipITs>
                                     <redirectTestOutputToFile>true</redirectTestOutputToFile>
                                     <forkCount>0</forkCount>
                                     <systemPropertyVariables combine.children="append">
@@ -354,19 +355,29 @@
           <id>release</id>
           <build>
             <plugins>
-              <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-install-plugin</artifactId>
-                <executions>
-                  <execution>
-                    <id>default-install</id>
-                    <phase>install</phase>
-                  </execution>
-                </executions>
-                <inherited>false</inherited>
-              </plugin>
-            </plugins>
-          </build>
-        </profile>
+            <plugin>
+              <groupId>org.apache.maven.plugins</groupId>
+              <artifactId>maven-install-plugin</artifactId>
+              <executions>
+                <execution>
+                  <id>default-install</id>
+                  <phase>install</phase>
+                </execution>
+              </executions>
+              <inherited>false</inherited>
+            </plugin>
+          </plugins>
+        </build>
+      </profile>
+      <profile>
+          <id>j9</id>
+          <activation>
+             <jdk>[1.9,)</jdk>
+          </activation>
+          <properties>
+             <!-- JBTM-2796 Tomcat does not support JDK9 currently -->
+             <skipITs>true</skipITs>
+          </properties>
+      </profile>
     </profiles>
 </project>
