--- a/ArjunaJTS/idl/idlj/idlj-jdk9/pom.xml
+++ b/ArjunaJTS/idl/idlj/idlj-jdk9/pom.xml
@@ -53,18 +53,9 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-plugin</artifactId>
-                <executions>
-                    <execution>
-                        <id>default-test</id>
-                        <phase>test</phase>
-                        <goals>
-                            <goal>test</goal>
-                        </goals>
-                        <configuration combine.self="override">
-                            <skipTests>true</skipTests>
-                        </configuration>
-                    </execution>
-                </executions>
+                <configuration>
+                   <skipTests>true</skipTests>
+                </configuration>
             </plugin>
 
             <plugin>
