--- a/ArjunaJTS/jtax/pom.xml
+++ b/ArjunaJTS/jtax/pom.xml
@@ -27,7 +27,7 @@
   <properties>
     <openjdk-orb.jar>${settings.localRepository}/org/jboss/openjdk-orb/openjdk-orb/${version.org.jboss.openjdk-orb}/openjdk-orb-${version.org.jboss.openjdk-orb}.jar</openjdk-orb.jar>
     <idlj.boot.args>-Xbootclasspath/p:${openjdk-orb.jar}</idlj.boot.args>
-    <modular.jdk.args>--upgrade-module-path ${project.build.directory}/upgrademodulepath --add-exports java.corba/org.omg.CosTransactions=ALL-UNNAMED --add-exports java.corba/com.sun.corba.se.spi.orb=ALL-UNNAMED --add-exports java.corba/com.sun.corba.se.spi.ior=ALL-UNNAMED --add-exports java.corba/com.sun.corba.se.impl.ior=ALL-UNNAMED</modular.jdk.args>
+    <modular.jdk.args>--add-exports java.corba/org.omg.CosTransactions=ALL-UNNAMED --add-exports java.corba/com.sun.corba.se.spi.orb=ALL-UNNAMED --add-exports java.corba/com.sun.corba.se.spi.ior=ALL-UNNAMED --add-exports java.corba/com.sun.corba.se.impl.ior=ALL-UNNAMED</modular.jdk.args>
 
     <java.corba.patch.name>idlj.java.corba.patch</java.corba.patch.name>
     <java.corba.patch.jar>${project.build.directory}/dependency/${java.corba.patch.name}-${project.version}.jar</java.corba.patch.jar>
@@ -173,7 +173,6 @@
         <version.compiler.plugin>3.6.0</version.compiler.plugin>
         <idlj.jdk9.args>
           --add-modules java.corba
-          --upgrade-module-path ${project.build.directory}/upgrademodulepath
           --add-exports java.corba/com.sun.corba.se.spi.orb=ALL-UNNAMED
           --add-exports java.corba/com.sun.corba.se.spi.ior=ALL-UNNAMED
           --add-exports java.corba/com.sun.corba.se.impl.ior=ALL-UNNAMED
@@ -181,7 +180,6 @@
         <jacorb.jdk9.args>
           --add-modules java.corba
           --patch-module java.corba=${project.build.directory}/java9-jacorb/jacorb-omgapi-${version.org.jacorb.jacorb}.jar
-          --upgrade-module-path ${project.build.directory}/upgrademodulepath
           --add-exports java.corba/org.omg.CORBA_2_5=ALL-UNNAMED
           --add-exports=java.corba/org.omg.CONV_FRAME=ALL-UNNAMED
           --add-exports=java.corba/org.omg.CSIIOP=ALL-UNNAMED
@@ -246,13 +244,6 @@
                       <overWrite>false</overWrite>
                       <outputDirectory>${project.basedir}/target/java9-jacorb</outputDirectory>
                     </artifactItem>
-                    <artifactItem>
-                      <groupId>org.jboss.narayana.jta</groupId>
-                      <artifactId>narayana-jta-j9-module</artifactId>
-                      <version>${project.version}</version>
-                      <type>jar</type>
-                      <outputDirectory>${project.build.directory}/upgrademodulepath</outputDirectory>
-                    </artifactItem>
                   </artifactItems>
                 </configuration>
               </execution>
@@ -271,8 +262,6 @@
                   <compilerArgs>
                     <arg>--add-modules</arg>
                     <arg>java.corba</arg>
-                    <arg>--upgrade-module-path</arg>
-                    <arg>${project.build.directory}/upgrademodulepath</arg>
                   </compilerArgs>
                 </configuration>
               </execution>
