--- a/tomcat/tomcat-jta/pom.xml
+++ b/tomcat/tomcat-jta/pom.xml
@@ -46,6 +46,12 @@
             <scope>provided</scope>
         </dependency>
         <dependency>
+            <groupId>org.apache.tomcat</groupId>
+            <artifactId>tomcat-catalina</artifactId>
+            <version>${version.org.apache.tomcat}</version>
+            <scope>provided</scope>
+        </dependency>
+        <dependency>
             <groupId>org.jboss.spec.javax.transaction</groupId>
             <artifactId>jboss-transaction-api_1.2_spec</artifactId>
             <version>${version.org.jboss.spec.javax.transaction}</version>
@@ -165,12 +171,6 @@
 	    <version>${version.com.h2database}</version>
             <scope>test</scope>
         </dependency>
-        <dependency>
-            <groupId>org.apache.tomcat</groupId>
-            <artifactId>tomcat-catalina</artifactId>
-            <version>${version.org.apache.tomcat}</version>
-            <scope>test</scope>
-        </dependency>
     </dependencies>
     <build>
         <plugins>
@@ -193,7 +193,7 @@
                             <artifactSet>
                                 <includes>
                                     <include>org.jboss.spec.javax.transaction:jboss-transaction-api_1.2_spec</include>
-                                    <include>org.jboss.narayana:common</include>
+                                    <includel>org.jboss.narayana:common</includel>
                                     <include>org.jboss.narayana.arjunacore:arjuna</include>
                                     <include>org.jboss.narayana.jta:jta</include>
                                     <include>org.jboss.narayana.jta:jdbc</include>
